--- a/config-service/src/main/resources/config/auth-service.yml
+++ b/config-service/src/main/resources/config/auth-service.yml
@@ -1,46 +1,39 @@
 server:
-  port: ${PORT:5001}
-
+    port: '${PORT:5001}'
 logging:
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
-  level:
-    root: INFO
-    org.springframework.web: INFO
-    org.springframework.security: DEBUG
-    spring-cloud-starter-netflix-eureka-client: DEBUG
-
+    pattern:
+        console: '%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n'
+    level:
+        root: INFO
+        org.springframework.web: INFO
+        org.springframework.security: DEBUG
+        spring-cloud-starter-netflix-eureka-client: DEBUG
 eureka:
-  instance:
-    hostname: 192.168.100.29
-    metadataMap:
-      instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}
-    preferIpAddress: true
-    leaseRenewalIntervalInSeconds: 5
-    lease-expiration-duration-in-seconds: 5
-  client:
-    fetchRegistry: true
-    registryFetchIntervalSeconds: 5
-    serviceUrl:
-      defaultZone: http://192.168.100.29:8802/eureka/
-
+    instance:
+        leaseRenewalIntervalInSeconds: 1
+        leaseExpirationDurationInSeconds: 2
+    server:
+        enableSelfPreservation: false
+    client:
+        serviceUrl:
+            defaultZone: 'http://192.168.100.29:8761/eureka/'
 spring:
-  jpa:
-    open-in-view: true
-    hibernate:
-      ddl-auto: none
-    properties:
-      hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-  datasource:
-    url: 'jdbc:mysql://192.168.100.29:3308/user_service?useSSL=false&serverTimezone=UTC&autoReconnect=true'
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    testOnBorrow: true
-    testWhileIdle: true
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 30000
-    validationQuery: 'SELECT 1'
-    max-active: 15
-    max-idle: 10
-    max-wait: 8000
+    jpa:
+        open-in-view: true
+        hibernate:
+            ddl-auto: none
+        properties:
+            hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+    datasource:
+        url: 'jdbc:mysql://192.168.100.29:3308/user_service?useSSL=false&serverTimezone=UTC&autoReconnect=true'
+        username: root
+        password: root
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        testOnBorrow: true
+        testWhileIdle: true
+        timeBetweenEvictionRunsMillis: 60000
+        minEvictableIdleTimeMillis: 30000
+        validationQuery: 'SELECT 1'
+        max-active: 15
+        max-idle: 10
+        max-wait: 8000
