--- a/config-service/src/main/resources/config/user-service.yml
+++ b/config-service/src/main/resources/config/user-service.yml
@@ -1,61 +1,55 @@
 server:
-  port: ${PORT:5003}
-
+    port: '${PORT:5003}'
 logging:
-  level:
-    root: INFO
-    com.scg.service: TRACE
-    org.springframework.web: INFO
-    org.springframework.web.HttpLogging: DEBUG
-    org.springframework.security: DEBUG
-    org.springframework.security.oauth2: DEBUG
-    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
-  pattern:
-    console: '%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n'
-
+    level:
+        org.influxdb: DEBUG
 eureka:
-  instance:
-    hostname: 192.168.100.29
-    metadataMap:
-      instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}
-    preferIpAddress: true
-    leaseRenewalIntervalInSeconds: 5
-    lease-expiration-duration-in-seconds: 5
-  client:
-    fetchRegistry: true
-    registryFetchIntervalSeconds: 5
-    serviceUrl:
-      defaultZone: http://192.168.100.29:8802/eureka/
-
+    instance:
+        leaseRenewalIntervalInSeconds: 1
+        leaseExpirationDurationInSeconds: 2
+    server:
+        enableSelfPreservation: false
+    client:
+        serviceUrl:
+            defaultZone: 'http://192.168.100.29:8761/eureka/'
 spring:
-  rabbitmq:
-    port: 5672
-    host: 192.168.100.29
-    username: appuser
-    password: appuser
-  jpa:
-    open-in-view: true
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-  datasource:
-    url: 'jdbc:mysql://192.168.100.29:3308/user_service?useSSL=false&serverTimezone=UTC&autoReconnect=true'
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    testOnBorrow: true
-    testWhileIdle: true
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 30000
-    validationQuery: 'SELECT 1'
-    max-active: 15
-    max-idle: 10
-    max-wait: 8000
-
+    rabbitmq:
+        port: 5672
+        host: 192.168.100.29
+        username: appuser
+        password: appuser
+    jpa:
+        open-in-view: true
+        hibernate:
+            ddl-auto: update
+        properties:
+            hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+    datasource:
+        url: 'jdbc:mysql://192.168.100.29:3308/user_service?useSSL=false&serverTimezone=UTC&autoReconnect=true'
+        username: root
+        password: root
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        testOnBorrow: true
+        testWhileIdle: true
+        timeBetweenEvictionRunsMillis: 60000
+        minEvictableIdleTimeMillis: 30000
+        validationQuery: 'SELECT 1'
+        max-active: 15
+        max-idle: 10
+        max-wait: 8000
 flyway:
-  enabled: true
-  url: 'jdbc:mysql://192.168.100.29:3308/mysql'
-  schemas: user_service
-  user: root
-  password: root
+    enabled: true
+    url: 'jdbc:mysql://192.168.100.29:3308/mysql'
+    schemas: user_service
+    user: root
+    password: root
+management:
+    metrics:
+        export:
+            influx: {db: mali, uri: 'http://192.168.100.29:8086', userName: user, password: pass, step: 15s, autoCreateDb: false}
+    endpoint:
+        prometheus:
+            enabled: true
+    endpoints:
+        web.server:
+            auto-time-requests: true
