--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM adoptopenjdk:8u212-b04-jre-hotspot-bionic
-COPY target/user-service-1.0.jar /app/app.jar
+FROM openjdk:8-jdk-alpine
+COPY target/user-service-1.0.1.jar /app/app.jar
 CMD ["java", "-jar", "/app/app.jar"]
 EXPOSE 5003
